# FMAMM_LVR

./: .gitignore  pyproject.toml  readme.md
notebooks/: CPMM_FMAMM_LVR_comparison.ipynb  CPMM_FMAMM_op_LVR_comparison.ipynb  FMAMM_LVR_derivation.ipynb  FMAMM_LVR_simulation.ipynb  FMAMM_batch_math.ipynb  LVR_derivation.ipynb
