[tool.poetry]
name = "fmamm-lvr"
version = "0.1.0"
description = ""
authors = ["kosunghun317 <kosunghun317@kaist.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
black = {extras = ["jupyter"], version = "^24.4.2"}
ipykernel = "^6.29.5"
sympy = "^1.13.0"
numpy = "^2.0.0"
scipy = "^1.14.0"
cvxpy = "^1.5.2"
matplotlib = "^3.9.1"
numba = "^0.60.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
